2007-09-14  Albert Chu  <chu11@llnl.gov>

	* Fix compiler warnings.
	
2007-09-05  Albert Chu  <chu11@llnl.gov>

        * Fix FSF address throughout.
	
2007-04-03  Albert Chu  <chu11@llnl.gov>

	* tagged cerebro-1-1-5

	* META: update for release

	* cerebro.spec.in: Update.
	
2007-04-03  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_speaker.c (cerebrod_speaker): Fix
	mem-leak.

	* src/cerebrod/cerebrod_listener_data (metric_data_create): Add
	assert.

	* src/cerebrod/cerebrod_listener_data
	(cerebrod_listener_data_update): Fix metric names hash corner
	case.

	* src/cerebrod/cerebrod_event_update.c
	(_event_node_timeout_data_add, _event_node_timeout_data_callback):
	Add pthread lock checks.

	* src/cerebrod/cerebrod_event_server.c
	(_event_server_service_connection): Fix potential race condition.

	* src/cerebrod/cerebrod_event_server.c: Remove unused globals.

	* src/cerebrod/cerebrod_event_update.h,
	src/cerebrod/cerebrod_event_update.c
	(cerebrod_event_modules_setup, cerebrod_event_modules_update): Fix
	race condition.

	* Makefile.am: Dist out cerebro spec files.
	
2007-04-02  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_listener_data.c: Fix race condition.
	
2007-03-01  Albert Chu  <chu11@llnl.gov>

	* cerebro.spec.in: Fix default permissions issue.
	
2007-02-09  Albert Chu  <chu11@llnl.gov>

	* src/libs/modules/metric_module.c (_metric_module_cb),
	src/libs/modules/event_module.c (_event_module_cb),
	src/libs/modules/monitor_module.c (_monitor_module_cb): Fix static
	compile bug.

	* src/cerebrod/cerebrod_speaker.c: Remove pthread use when
	--with-cerebrod-no-threads is used.

	* src/libs/modules/metric_module.c: Fix various static module
	build issues.

	* src/modules/event/Makefile.am: Fix static build bug.
	
2007-02-08  Albert Chu  <chu11@llnl.gov>

	* cerebro.spec.in: Add cerebrod restart fix.  Fix ppc64 packaging issue.
	
2007-02-06  Albert Chu  <chu11@llnl.gov>

	* src/modules/clusterlist/cerebro_clusterlist_genders_util.h,